# regalloc3

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/ahash/: all.html  index.html  struct.AHasher.html
docs/allocator_api2/: all.html  index.html  macro.unsize_box.html  macro.vec.html  trait.SliceExt.html
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/arbitrary/: all.html  enum.Error.html  index.html  struct.MaxRecursionReached.html  struct.Unstructured.html  trait.Arbitrary.html  type.Result.html
docs/bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
docs/hashbrown/: all.html  enum.TryReserveError.html  index.html  struct.HashMap.html  struct.HashSet.html  struct.HashTable.html  trait.Equivalent.html
docs/log/: all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_logger.html  fn.set_logger_racy.html  fn.set_max_level.html  fn.set_max_level_racy.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.log_enabled.html  macro.trace.html  macro.warn.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
docs/memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
docs/num_traits/: all.html  enum.FloatErrorKind.html  fn.clamp.html  fn.clamp_max.html  fn.clamp_min.html  index.html  struct.ParseFloatError.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumOps.html  trait.NumRef.html  trait.RefNum.html
docs/once_cell/: all.html  index.html
docs/ordered_float/: all.html  enum.ParseNotNanError.html  index.html  sidebar-items.js  struct.FloatIsNan.html  struct.NotNan.html  struct.OrderedFloat.html  trait.FloatCore.html
docs/pest/: all.html  enum.Atomicity.html  enum.Lookahead.html  enum.MatchDir.html  enum.Token.html  fn.merge_spans.html  fn.set_call_limit.html  fn.set_error_detail.html  fn.state.html  index.html  macro.fails_with.html  macro.parses_to.html  struct.Lines.html  struct.LinesSpan.html  struct.ParserState.html  struct.Position.html  struct.Span.html  struct.Stack.html  trait.Parser.html  trait.RuleType.html  type.ParseResult.html
docs/pest_derive/: all.html  derive.Parser.html  index.html
docs/pest_generator/: all.html  fn.derive_parser.html  index.html
docs/pest_meta/: all.html  fn.parse_and_optimize.html  fn.unwrap_or_report.html  index.html
docs/proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  (+2 more)
example_reginfo/: aarch64.reginfo  riscv.reginfo
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile.rs  compile_reuse.rs  func_gen.rs  func_parse.rs  parallel_moves.rs  reginfo_gen.rs  reginfo_parse.rs
fuzz/src/: lib.rs
regalloc3-tool/: Cargo.toml
regalloc3-tool/src/: main.rs
regalloc3-tool/src/example_reginfo/: aarch64.rs  mod.rs  riscv.rs
src/: allocation_unit.rs  compact_list.rs  entity_utils.rs  function.rs  lib.rs  output.rs  reginfo.rs  union_find.rs
(+1294 files in other folders)
