[package]
name = "regalloc3-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.3.2"
pretty_env_logger = "0.5.0"
log = "0.4.20"

[dependencies.regalloc3]
path = ".."
features = ["arbitrary", "parse", "trace-log", "fuzzing"]

[[bin]]
name = "func_parse"
path = "fuzz_targets/func_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reginfo_parse"
path = "fuzz_targets/reginfo_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "func_gen"
path = "fuzz_targets/func_gen.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reginfo_gen"
path = "fuzz_targets/reginfo_gen.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compile_reuse"
path = "fuzz_targets/compile_reuse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parallel_moves"
path = "fuzz_targets/parallel_moves.rs"
test = false
doc = false
bench = false
