[package]
name = "regalloc3-tool"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0 WITH LLVM-exception"
description = "Tool for testing regalloc3"

[dependencies]
anyhow = "1.0.75"
arbitrary = "1.3.2"
clap = { version = "4.3.11", features = ["derive"] }
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regalloc3 = { path = "..", features = ["parse", "trace-log", "arbitrary", "clap"] }
